Fix chronologie Body Overflow

--- a/style/scss/partials/chronologie.scss
+++ b/style/scss/partials/chronologie.scss
@@ -1,6 +1,5 @@
 .page-chronologie {
     position: relative;
-    width: 100vw;
     background-color: $background-lightgrey;
 
     .page-chronologie-inner {
